--- a/Style/style.css
+++ b/Style/style.css
@@ -78,10 +78,10 @@ a{
     top: 18%;
 }
 
-.announce {
+.announcement{
     background: -webkit-linear-gradient(0deg, #008102, #93d12d);
     height: 40px;
-    width: 25%;
+    width: 20px;
 }
 
 .content-img {
@@ -91,4 +91,6 @@ a{
 
 .card_title{
     background: -webkit-linear-gradient(0deg, #008102, #93d12d);
+    /* height: 40px;
+    width: 20px; */
 }
