--- a/Style/style_about.css
+++ b/Style/style_about.css
@@ -1,7 +1,7 @@
 
 .header_section{
     background-image: url(../img/banner1.png);
-    height: 100vh;
+    height: 80vh;
     width: 100%;
     /* align-items: center; */
     background-repeat: no-repeat;
@@ -21,8 +21,14 @@
 .banner_text{
     /* position: absolute; */
    padding-top:30px;
-    z-index: 1;
+    /* z-index: 1; */
+    font-size: 1.8em ;
+    font-weight: bolder;
     
+}
+.banner_text2nd{
+    font-size: 1.5em ;
+    font-weight: bolder;
 }
 .overview{
     /* margin: 25px, 10Spx, 10px, 25px; */
@@ -38,7 +44,7 @@
     
 }
 .card-img{
-    height: 300px;
+    height: 220px;
 }
 .borders{
     border-top-style: dotted;
@@ -64,3 +70,23 @@
     margin-top: -20px;
     margin-left: 21px;
 }
+@media screen and (max-width: 420px) {
+   .banner_logo{
+    height: 50px;
+    width: 50px;
+    margin-top: -25px;
+   }
+   .banner_text{
+    /* position: absolute; */
+   padding-top:10px;
+    /* z-index: 1; */
+    font-size: 15px ;
+    font-weight: bolder;
+    
+    }
+    .banner_text2nd{
+    font-size: 12px ;
+    font-weight: bolder;
+    margin-top: -15px;
+    }
+  }
