--- a/Style/style.css
+++ b/Style/style.css
@@ -126,6 +126,21 @@ input:-webkit-autofill:active {
     font-weight:700;
     color: #148D08;
     padding-left: 10px;
+    
+}
+.description-left-border{
+    border-left: 8px solid #FFD600;
+    padding-left: 10px;
+}
+.title-left-border{
+    border-left: 8px solid #148D08;
+    padding-left: 10px;
+}
+.impu-desc {
+    border-left: 8px solid #FFD600;
+    /* font-size: 20px; */
+    font-weight:500;
+    padding-left: 10px;
 }
 
 .tag-sub {
