--- a/Style/style_about.css
+++ b/Style/style_about.css
@@ -1,4 +1,8 @@
+ @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
 
+ * {
+     font-family: 'Poppins', sans-serif;
+ }
 .header_section{
     background-image: url(../img/banner1.png);
     height: 10vh;
@@ -78,3 +82,4 @@
     margin-top: -15px;
     }
   }
+  
