--- a/Style/style.css
+++ b/Style/style.css
@@ -181,6 +181,41 @@ input:-webkit-autofill:active {
     transition: all .4s ease;
 }
 
+.right-side{
+    /* position: absolute; */
+   
+    height: 100vh;
+    background-color: #397543;
+    
+}
+.title-con p{
+    font-size: 30px;
+    
+}
+.btn-login{
+    width: 250px;
+}
+/* .button-con {
+    border-top: 5px solid red;
+    border: thin;
+} */
+.footer-left{
+    margin-top: 200px;
+}
+.footer-mobile {
+position: fixed;
+bottom: 0;
+text-align: center;
+width: 100%;
+padding: 10px;
+background-color: #d3d3d3;
+}
+@media only screen and (min-width: 992px) {
+.footer-mobile {
+    display: none;
+}
+}
+
 @media only screen and (min-width: 320px) and (max-width: 1024px)  {
    .navbar-nav{
     margin-left: 15px;
