--- a/Style/style_about.css
+++ b/Style/style_about.css
@@ -64,9 +64,9 @@
 }
 @media screen and (max-width: 420px) {
    .banner_logo{
-    height: 50px;
-    width: 50px;
-    margin-top: -25px;
+    /* height: 50px; */
+    /* width: 50px; */
+    /* margin-top: -25px; */
    }
    .banner_text{
     /* position: absolute; */
